# ScientificMaxcutSolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stats.scip.root.txt  stats.scip.txt  visualize_solving_history.ipynb
.github/workflows/: cmake-mac.yml
benchmark/: create_solutions.py  eval.py  experiments.yml
include/sms/auxiliary/: base.hpp  biconnected_partition.hpp  cl_parser.hpp  compact_graph.hpp  graphs.hpp  kl_heuristic.hpp  math.hpp  mc_solution.hpp  mst_heuristic.hpp  ocw_seperator.hpp  odd_closed_walk.hpp  scip.hpp  scip_exception.hpp  small_ccs.hpp  statistics.hpp  two_separator.hpp
include/sms/branch/: branchrule_degree.hpp  branchrule_nm.hpp  branchrule_pscost.hpp  branchrule_smallest_last.hpp
include/sms/conshdlr/: conshdlr_holes.hpp  conshdlr_odd_subset_cycles.hpp  conshdlr_oscw.hpp  conshdlr_triangles.hpp  holes.hpp  odd_cycles.hpp  triangles.hpp
include/sms/eventhdlr/: eventhdlr_history.hpp  eventhdlr_root.hpp
include/sms/instance/: convert.hpp  ising.hpp  maxcut.hpp  qubo.hpp
include/sms/io/: dimacs_reader.hpp  io.hpp  ising_reader.hpp
include/sms/pheur/: pheur_mqlib.hpp  pheur_mst.hpp
include/sms/probdata/: mc_edges.hpp  mc_edges_only.hpp  mc_rooted.hpp
include/sms/solver/: basic_ocw.hpp  basic_qubo_enumeration_solver.hpp  enumeration_solver.hpp
micro_benchmark/: CMakeLists.txt  cache.cpp
params/: aggressive_root.set  default.set  default_mt.set  ws_branch-degree-dynamic.set  ws_branch-degree-static.set  ws_branch-scip-default.set  ws_branch-scip-pscost.set  ws_eo_branch-scip-default.set  ws_eo_branch-scip-pscost.set  ws_fr_branch-degree-dynamic.set  ws_fr_branch-scip-default.set
scripts/: scip_stats_parser.py
src/auxiliary/: biconnected_partition.cpp  cl_parser.cpp  compact_graph.cpp  graphs.cpp  kl_heuristic.cpp  mc_solution.cpp  mst_heuristic.cpp  ocw_seperator.cpp  odd_closed_walk.cpp  scip.cpp  small_ccs.cpp  two_separator.cpp
src/auxiliary/test/: CMakeLists.txt  biconnected_partition_gtest.cpp  compact_graph_gtest.cpp  graphs_gtest.cpp  kl_heuristic_gtest.cpp  math_gtest.cpp  mc_solution_gtest.cpp  mst_heuristic_gtest.cpp  ocw_separator_gtest.cpp  odd_closed_walk_gtest.cpp  small_ccs_gtest.cpp  statistics_gtest.cpp  two_separator_gtest.cpp
src/branch/: branchrule_degree.cpp  branchrule_nm.cpp  branchrule_pscost.cpp  branchrule_smallest_last.cpp
src/conshdlr/: conshdlr_holes.cpp  conshdlr_odd_subset_cycles.cpp  conshdlr_oscw.cpp  conshdlr_triangles.cpp
src/conshdlr/test/: CMakeLists.txt  holes_gtest.cpp  triangles_gtest.cpp
src/eventhdlr/: eventhdlr_history.cpp  eventhdlr_root.cpp
src/instance/: convert.cpp  ising.cpp  maxcut.cpp  qubo.cpp
src/instance/test/: CMakeLists.txt  convert_gtest.cpp  ising_gtest.cpp  maxcut_gtest.cpp  qubo_gtest.cpp
src/io/: dimacs_reader.cpp  io.cpp  ising_reader.cpp
src/io/test/: CMakeLists.txt  dimacs_reader_gtest.cpp  io_gtest.cpp  ising_reader_gtest.cpp
src/mains/: checks.cpp  main.cpp  mqlib.cpp
src/pheur/: pheur_mqlib.cpp  pheur_mst.cpp
src/probdata/: mc_edges_only.cpp  mc_rooted.cpp
src/probdata/test/: CMakeLists.txt  probdata_mc_edges_only_gtest.cpp  probdata_mc_rooted_gtest.cpp
src/solver/: basic_ocw.cpp  basic_qubo_enumeration_solver.cpp  enumeration_solver.cpp
src/solver/test/: CMakeLists.txt  basic_ocw_gtest.cpp  basic_qubo_enumeration_solver_gtest.cpp  enumeration_solver_gtest.cpp
test/data/: ENZYMES_g295_consub-kernelized.mc  be120.3.5.mc  be250.3.mc  bio-diseasome-kernelized.mc  bio-diseasome.el  bio-diseasome.mc  bqp250-3.mc  ca-CSphd-kernelized.mc  ca-netscience-kernelized.mc  ca-netscience.mc  ca-netscience.wel  double_star.mc  easy_20_vertices.mc  ego-facebook-kernelized.mc  ego-facebook.mc  ego-facebook.wel  error_comment.mc  error_comment_in_file.mc  error_delimiter.bq  error_double_definition.mc  error_double_definition_1.bq  error_double_definition_2.bq  error_double_definition_3.bq  error_files_bq.csv  error_files_mc.csv  error_grid_undetermined.gsg  error_header_missing.bq  error_id_range_0.bq  error_id_range_5.bq  error_missing_edges.gsg  error_no_weight.bq  error_node_id_letter.mc  error_selfloop.mc  error_too_many_edges.mc  error_wrong_number_of_edges.gsg  error_wrong_number_of_edges_2.gsg  g000292.txt1-kernelized.mc  g000302.txt1-kernelized.mc  g000981.el  g000981.mc  (+59 more)
